<resources>
    <string name="app_name">A6Group7</string>
    <string name="groupNames">Team A6Group7 Members:\n\nMuno Ali\nAbhilash Singh\nAlex Perkins</string>
    <string name="aboutUs">About Us</string>
    <string name="get_weather">Get Weather</string>
    <string name="enter_city">Enter city (e.g. Seattle)</string>
    <string name="weather_appear">Weather info will appear here</string>
    <string name="showFahrenheit">Show in Fahrenheit</string>

    <string name="login">Login</string>
    <string name="show_history">Show History</string>
    <string name="send_sticker">Send Sticker</string>
    <string name="choose_a_sticker">Choose a Sticker</string>
    <string name="recipient_username">Recipient username</string>
    <string name="fire_sticker">Fire Sticker</string>
    <string name="heart_sticker">Heart Sticker</string>
    <string name="star_sticker">Star Sticker</string>
    <string name="timestamp">Timestamp</string>
    <string name="from">From:</string>

    <string name="channel_id">sticker_channel_id</string>
    <string name="channel_name">Sticker Notifications</string>
    <string name="channel_description">Notifications for new stickers received</string>

</resources>